[gd_scene load_steps=27 format=2]

[ext_resource path="res://Fuentes/remnant/Remnant-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Pruebas/GUI.gd" type="Script" id=2]
[ext_resource path="res://Interfaz/BotonBajarVolumen.gd" type="Script" id=3]
[ext_resource path="res://Interfaz/BotonSubirVolumen.gd" type="Script" id=4]
[ext_resource path="res://Interfaz/BajarBrillo.gd" type="Script" id=5]
[ext_resource path="res://Interfaz/SubirBrillo.gd" type="Script" id=6]
[ext_resource path="res://Interfaz/BajarContraste.gd" type="Script" id=7]
[ext_resource path="res://Interfaz/SubirContraste.gd" type="Script" id=8]
[ext_resource path="res://Interfaz/BajarSaturacion.gd" type="Script" id=9]
[ext_resource path="res://Interfaz/SubirSaturacion.gd" type="Script" id=10]
[ext_resource path="res://Interfaz/SwitchNiebla.gd" type="Script" id=11]
[ext_resource path="res://Interfaz/SwitchSSAO.gd" type="Script" id=12]
[ext_resource path="res://Interfaz/SwitchAutoExposure.gd" type="Script" id=13]
[ext_resource path="res://Interfaz/SwitchReflejosPantalla.gd" type="Script" id=14]
[ext_resource path="res://Interfaz/SwitchBlurLejano.gd" type="Script" id=15]
[ext_resource path="res://Interfaz/SwitchBlurCercano.gd" type="Script" id=16]
[ext_resource path="res://Interfaz/SwitchGlow.gd" type="Script" id=17]
[ext_resource path="res://Imagenes/AtrapadoParaSiempre.jpg" type="Texture" id=18]
[ext_resource path="res://Interfaz/OpcionesVisuales.gd" type="Script" id=19]
[ext_resource path="res://Interfaz/NotasGUI.gd" type="Script" id=20]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.362
margin_top = 6.67419
margin_right = 25.3619
margin_bottom = 6.67419
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 600.0
margin_top = 333.0
margin_right = 1319.0
margin_bottom = 747.0
alignment = 1

[node name="Titulo" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 719.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Pausa"
align = 1

[node name="Tiempo" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 719.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
text = "Tiempo transcurrido: "
align = 1

[node name="Separador2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 719.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="BotonConfigs" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 719.0
margin_bottom = 214.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Configuraciones"

[node name="Separador4" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 719.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="BotonNotas" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 719.0
margin_bottom = 314.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Notas"

[node name="Separador3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 318.0
margin_right = 719.0
margin_bottom = 367.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 371.0
margin_right = 719.0
margin_bottom = 414.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonVolver" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 364.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Volver al juego"

[node name="BotonSalir" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 368.0
margin_right = 719.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Salir del juego"

[node name="OpcionesVisuales" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OpcionesVisuales"]
self_modulate = Color( 0.458824, 0.454902, 0.454902, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.4695
margin_top = -202.043
margin_right = 13.4695
margin_bottom = 234.957
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="OpcionesVisuales"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OpcionesVisuales/CenterContainer"]
margin_left = 594.0
margin_top = 141.0
margin_right = 1325.0
margin_bottom = 938.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo2" type="Label" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_right = 731.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Configuraciones"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separador1" type="Label" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 731.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Volumen" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 731.0
margin_bottom = 167.0

[node name="Volumen" type="Label" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Volumen"]
margin_right = 354.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Volumen:       "
align = 1

[node name="Bajar" type="Button" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Volumen"]
margin_left = 358.0
margin_right = 423.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "bajar"
script = ExtResource( 3 )

[node name="BarraVolumen" type="HSlider" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Volumen"]
margin_left = 427.0
margin_right = 661.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -20.0
max_value = 20.0
editable = false
scrollable = false
tick_count = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subir" type="Button" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Volumen"]
margin_left = 665.0
margin_right = 731.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "Subir"
script = ExtResource( 4 )

[node name="Brillo" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 731.0
margin_bottom = 220.0

[node name="Brillo" type="Label" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Brillo"]
margin_right = 348.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Brillo:           "
align = 1

[node name="Bajar" type="Button" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Brillo"]
margin_left = 352.0
margin_right = 417.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "bajar"
script = ExtResource( 5 )

[node name="BarraBrillo" type="HSlider" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Brillo"]
margin_left = 421.0
margin_right = 661.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.01
max_value = 2.0
step = 0.1
value = 1.5
editable = false
scrollable = false
tick_count = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subir" type="Button" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Brillo"]
margin_left = 665.0
margin_right = 731.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "Subir"
script = ExtResource( 6 )

[node name="Contraste" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 731.0
margin_bottom = 273.0

[node name="Contraste" type="Label" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Contraste"]
margin_right = 355.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Contraste:  "
align = 1

[node name="Bajar" type="Button" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Contraste"]
margin_left = 359.0
margin_right = 424.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "bajar"
script = ExtResource( 7 )

[node name="BarraContraste" type="HSlider" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Contraste"]
margin_left = 428.0
margin_right = 661.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.01
max_value = 2.0
step = 0.1
value = 1.0
editable = false
scrollable = false
tick_count = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subir" type="Button" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Contraste"]
margin_left = 665.0
margin_right = 731.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "Subir"
script = ExtResource( 8 )

[node name="Saturacion" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 277.0
margin_right = 731.0
margin_bottom = 326.0

[node name="Saturacion" type="Label" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Saturacion"]
margin_right = 357.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Saturacion:"
align = 1

[node name="Bajar" type="Button" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Saturacion"]
margin_left = 361.0
margin_right = 426.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "bajar"
script = ExtResource( 9 )

[node name="BarraSaturacion" type="HSlider" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Saturacion"]
margin_left = 430.0
margin_right = 661.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.01
max_value = 2.0
step = 0.1
value = 1.0
editable = false
scrollable = false
tick_count = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subir" type="Button" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Saturacion"]
margin_left = 665.0
margin_right = 731.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "Subir"
script = ExtResource( 10 )

[node name="Niebla" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 731.0
margin_bottom = 379.0

[node name="Switch" type="CheckButton" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Niebla"]
margin_right = 240.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
pressed = true
text = "Niebla"
script = ExtResource( 11 )

[node name="SSAO" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 383.0
margin_right = 731.0
margin_bottom = 432.0

[node name="Switch" type="CheckButton" parent="OpcionesVisuales/CenterContainer/VBoxContainer/SSAO"]
margin_right = 189.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
pressed = true
text = "SSAO"
script = ExtResource( 12 )

[node name="BlurLejano" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 731.0
margin_bottom = 485.0

[node name="Switch" type="CheckButton" parent="OpcionesVisuales/CenterContainer/VBoxContainer/BlurLejano"]
margin_right = 377.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
text = "Blur Lejano"
script = ExtResource( 15 )

[node name="BlurCercano" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 489.0
margin_right = 731.0
margin_bottom = 538.0

[node name="Switch" type="CheckButton" parent="OpcionesVisuales/CenterContainer/VBoxContainer/BlurCercano"]
margin_right = 402.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
pressed = true
text = "Blur Cercano"
script = ExtResource( 16 )

[node name="Glow" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 542.0
margin_right = 731.0
margin_bottom = 591.0

[node name="Switch" type="CheckButton" parent="OpcionesVisuales/CenterContainer/VBoxContainer/Glow"]
margin_right = 511.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
pressed = true
text = "Brillo ambiental"
script = ExtResource( 17 )

[node name="AutoExposure" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 595.0
margin_right = 731.0
margin_bottom = 644.0

[node name="Switch" type="CheckButton" parent="OpcionesVisuales/CenterContainer/VBoxContainer/AutoExposure"]
margin_right = 731.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
pressed = true
text = "Autoajuste luz ambiental"
script = ExtResource( 13 )

[node name="SSReflections" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 648.0
margin_right = 731.0
margin_bottom = 697.0

[node name="Switch" type="CheckButton" parent="OpcionesVisuales/CenterContainer/VBoxContainer/SSReflections"]
margin_right = 600.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
text = "Reflejos de pantalla"
script = ExtResource( 14 )

[node name="Separador2" type="Label" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 701.0
margin_right = 731.0
margin_bottom = 750.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="OpcionesVisuales/CenterContainer/VBoxContainer"]
margin_top = 754.0
margin_right = 731.0
margin_bottom = 797.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonVolver" type="Button" parent="OpcionesVisuales/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 731.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Atras"

[node name="NotasGUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="NotasGUI"]
self_modulate = Color( 0.458824, 0.454902, 0.454902, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.4695
margin_top = -202.043
margin_right = 13.4695
margin_bottom = 234.957
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="NotasGUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NotasGUI/CenterContainer"]
margin_left = 848.0
margin_top = 459.0
margin_right = 1072.0
margin_bottom = 620.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo2" type="Label" parent="NotasGUI/CenterContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Notas"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nota1" type="Label" parent="NotasGUI/CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 224.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="NotasGUI/CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 224.0
margin_bottom = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonVolver" type="Button" parent="NotasGUI/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_right = 224.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Atras"

[connection signal="pressed" from="CenterContainer/VBoxContainer/BotonConfigs" to="OpcionesVisuales" method="_on_BotonConfigs_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BotonNotas" to="NotasGUI" method="_on_BotonNotas_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/BotonVolver" to="." method="_on_BotonVolver_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/BotonSalir" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="OpcionesVisuales/CenterContainer/VBoxContainer/HBoxContainer2/BotonVolver" to="OpcionesVisuales" method="_on_BotonVolver_pressed"]
[connection signal="pressed" from="NotasGUI/CenterContainer/VBoxContainer/HBoxContainer3/BotonVolver" to="NotasGUI" method="_on_BotonVolver_pressed"]
